# AgentTrace

./: .gitignore  .last_trace  ARCHITECTURE.md  Cargo.toml  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
agenttrace/: __init__.py  _backend.py  _native.py  cli.py  config.py  langchain.py  pricing.py  reader.py  redaction.py  replayer.py  server.py  storage.py  tracer.py
agenttrace/instrumentation/: __init__.py  anthropic.py  langchain.py  openai.py
agenttrace/web/: __init__.py  index.html
agenttrace_native/: __init__.py
crates/agenttrace-core/: Cargo.toml
crates/agenttrace-core/src/: crc.rs  event.rs  lib.rs  reader.rs  storage.rs  writer.rs
crates/agenttrace-native/: Cargo.toml
crates/agenttrace-native/src/: lib.rs
crates/agenttrace-py/: Cargo.toml
crates/agenttrace-py/src/: lib.rs
docs/: AUTO_INSTRUMENTATION.md  BACKENDS.md  CLI.md  ENV.md  FORMAT.md  PRICING.md  REDACTION.md  REPLAY.md  STATUS.md  TESTING.md  UI.md
examples/: async_openai.py  auto_instrument.py  auto_langchain.py  diff_demo.py  langchain_basic.py  langgraph_basic.py  openai_stream.py  rag_demo.py  replay_demo.py
tests/python/: test_cli.py  test_config.py  test_reader.py  test_redaction.py  test_replayer.py  test_roundtrip.py
