[project]
name = "agenttrace"
version = "0.1.0"
description = "Record, replay, and debug AI agent runs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
]

[project.scripts]
agenttrace = "agenttrace.cli:main"

[project.optional-dependencies]
ui = ["fastapi", "uvicorn"]
langchain = ["langchain", "langgraph", "langchain-core"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agenttrace"]

[tool.setuptools.package-data]
agenttrace = ["web/*.html"]
