[project]
name = "agenttrace"
version = "0.1.0"
description = "Record, replay, and debug AI agent runs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
]

[project.scripts]
agenttrace = "agenttrace.cli:main"

[project.optional-dependencies]
ui = ["fastapi", "uvicorn"]
langchain = ["langchain", "langgraph", "langchain-core"]

[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[tool.maturin]
module-name = "agenttrace_native"
manifest-path = "crates/agenttrace-native/Cargo.toml"
python-source = "."
include = ["agenttrace/web/*.html"]
