[package]
name = "agenttrace-native"
version = "0.1.0"
edition = "2021"
authors = ["AgentTrace Contributors"]
description = "PyO3 bindings for AgentTrace core"

[lib]
name = "agenttrace_native"
crate-type = ["cdylib"]

[dependencies]
agenttrace-core = { path = "../agenttrace-core" }
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
